--- a/demo.html
+++ b/demo.html
@@ -21,6 +21,8 @@
       poster="poster.png"
       data-setup="{}">
     <source src="screenflowtest.mp4" type='video/mp4' />
+	<source src="screenflowtest.webm" type='video/webm' />
+	<source src="screenflowtest.ogg" type='video/ogg' />
     <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
     <track kind="subtitles" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
 	<track kind="chapters" label="Chapters" src="chapters.vtt" srclang="en" default>
